<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.j256.simplelogging</groupId>
	<artifactId>simplelogging</artifactId>
	<version>3.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>Simple Logging</name>
	<url>https://256stuff.com/sources/simplelogging/</url>
	<description>Small logging facade that backends to a number of standard logging packages and that
		can be copied into another project.  This allows you to write your code and include log messages
		without having a fixed dependency on any one logging package.  I include this code into my libraries
		and so they can stay agnostic. </description>
	<licenses>
		<license>
			<name>ISC License</name>
			<distribution>repo</distribution>
			<url>https://opensource.org/licenses/ISC</url>
		</license>
	</licenses>
	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>
	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<!-- optional dependencies -->
		<commons-logging-version>1.2</commons-logging-version>
		<slf4j-version>2.0.12</slf4j-version>
		<android-version>4.1.1.4</android-version>
		<logback.version>1.3.13</logback.version>
		<aws-lambda-java-core-version>1.2.0</aws-lambda-java-core-version>
		<log4j2-version>2.21.1</log4j2-version>
		<!-- external test package versions -->
		<easymock-version>3.6</easymock-version>
		<junit-version>4.13.2</junit-version>
	</properties>
	<scm>
		<url>https://github.com/j256/simplelogging</url>
		<connection>scm:git:ssh://git@github.com/j256/simplelogging.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/j256/simplelogging.git</developerConnection>
	</scm>
	<developers>
		<developer>
			<id>gray</id>
			<name>Gray Watson</name>
			<url>https://256stuff.com/gray/</url>
			<organization>256stuff.com</organization>
			<organizationUrl>https://256stuff.com/</organizationUrl>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<timezone>-5</timezone>
		</developer>
	</developers>
	<profiles>
		<profile>
			<id>st</id>
			<distributionManagement>
				<repository>
					<id>sonatype-nexus-staging</id>
					<name>Nexus Release Repository</name>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
				<snapshotRepository>
					<id>sonatype-nexus-snapshots</id>
					<name>Sonatype Nexus Snapshots</name>
					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
				</snapshotRepository>
			</distributionManagement>
		</profile>
		<profile>
			<id>testlog4jv1</id>
			<dependencies>
				<dependency>
					<!-- these are injected from release.sh and circleci config to test log4j reflection backend -->
					<groupId>${log4j.group}</groupId>
					<artifactId>${log4j.artifact}</artifactId>
					<version>${log4j.version}</version>
				</dependency>
			</dependencies>
		</profile>
	</profiles>
	<build>
		<finalName>simplelogging</finalName>
		<!-- Resources -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<!-- Test Resources -->
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
		<!-- Plugins -->
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<mavenExecutorId>forked-path</mavenExecutorId>
					<useReleaseProfile>false</useReleaseProfile>
					<arguments>-Psonatype-oss-release</arguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<additionalparam>-tag inheritDoc:X -Xdoclint:none</additionalparam>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<bottom>
						This content is licensed by Gray Watson under the
						&lt;a
						href="https://creativecommons.org/licenses/by-sa/3.0/" &gt;Creative Commons Attribution-Share Alike 3.0 License.
						&lt;/a&gt; </bottom>
					<additionalparam>-tag inheritDoc:X -Xdoclint:none</additionalparam>
					<excludePackageNames>
					</excludePackageNames>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<!-- j256 Releases (Code releases for j256.com) <j256@256stuff.com> -->
					<keyname>D3412AC1</keyname>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.11</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<useSystemClassLoader>false</useSystemClassLoader>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.j256.testcheckpublisher</groupId>
				<artifactId>test-check-publisher-maven-plugin</artifactId>
				<version>1.5</version>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<!-- optional dependencies that will only be used if you provide the dependencies yourself -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j-version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>${commons-logging-version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j2-version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>${log4j2-version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.google.android</groupId>
			<artifactId>android</artifactId>
			<version>${android-version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-lambda-java-core</artifactId>
			<version>${aws-lambda-java-core-version}</version>
			<optional>true</optional>
		</dependency>

		<!-- test dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit-version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>${easymock-version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j2-version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>

